Add basic stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,5 +12,5 @@ file(GLOB_RECURSE SOURCE_FILES
 	${CMAKE_SOURCE_DIR}/src/*.cpp)
 
 add_executable( ${PROJECT_NAME} ${SOURCE_FILES} )
-target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS}  ${PCL_LIBRARIES})
+target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS}  ${PCL_LIBRARIES} -lstdc++fs)
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17 )
