--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,14 +3,15 @@ project(MySFM)
 find_package( OpenCV REQUIRED )
 find_package (Eigen3 3.3 REQUIRED NO_MODULE)
 find_package (PCL REQUIRED)
-link_directories(${PCL_LIBRARY_DIRS})
+find_package(cvsba REQUIRED)
+link_directories(${PCL_LIBRARY_DIRS} ${cvsba_LIB_DIR})
 add_definitions(${PCL_DEFINITIONS})
 
-include_directories( ${PCL_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} include)
+include_directories( ${PCL_INCLUDE_DIRS} ${cvsba_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS} include)
 file(GLOB_RECURSE SOURCE_FILES 
 	${CMAKE_SOURCE_DIR}/src/*.c
 	${CMAKE_SOURCE_DIR}/src/*.cpp)
 
 add_executable( ${PROJECT_NAME} ${SOURCE_FILES} )
-target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS}  ${PCL_LIBRARIES} -lstdc++fs)
+target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS} ${cvsba_LIBS} ${PCL_LIBRARIES} -lstdc++fs)
 set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 17 )
